@@ -10,6 +10,8 @@ New
 * asthma view in Conditions tab
 * 'include up-to-date' option for cancer screening
 * COVID-19 bulk billing incentive prompt in billing view
+* filters for different billing typess (private, WorkCare, DVA, 'bulk'/direct)
+  in billing view
 
 Fix
 
